--- a/plugin.cfg
+++ b/plugin.cfg
@@ -4,4 +4,4 @@ name="FileSystem Bottom Panel"
 description="Godot plugin that dettaches the File System from the side docks and places it in the bottom panel"
 author="thimenesup"
 version="1.0"
-script="filesystem_dock.gd"
+script="file_system_dock.gd"
